'Fix letters overflow problem'

--- a/src/assets/scss/basic.scss
+++ b/src/assets/scss/basic.scss
@@ -52,6 +52,7 @@ input:invalid {
 
 body {
   background: $color-white;
+  word-wrap: break-word;
 }
 
 
